# api-manager

./: .env  .env.example  .gitignore  API_USAGE.md  CLAUDE.md  Cargo.toml  add-providers.html  database.sqlite3  database.sqlite3-shm  database.sqlite3-wal  readme.md  response1.json  response2.json
.cargo/: config.toml
.github/workflows/: README.md  build-debian.yml
.sqlx/: query-a6c383ee71628eeec903ad9a36cdc2210ac25b0f50c254123fefa1149a00f1f1.json
migrations/: 20250329205723_complete_setup.sql  20250331131426_recreate_model_pricing_table.sql  20250331205802_add_api_usage.sql
src/: lib.rs  main.rs
src/config/: app.rs  mod.rs
src/database/: connection.rs  mod.rs
src/handlers/api/: chat_completion.rs  mod.rs  pricing.rs  provider.rs
src/handlers/web/: mod.rs
src/models/: ai_model.rs  api_provider.rs  api_usage.rs  connection_pool.rs  health_check.rs  mod.rs  model_pricing.rs  pool_model_mapping.rs  user.rs
src/routes/: api.rs  mod.rs  web.rs
src/services/: balance_checker.rs  mod.rs  provider_pool.rs
